perf: 优化样式，添加字体；添加Dialog组件

--- a/src/color.less
+++ b/src/color.less
@@ -1,4 +1,7 @@
 @main-color: #1583d8;
-@second-color: #004d89;
+@secondary-color: #004d89;
 @white: #fff;
 @black: #000;
+@font-color-primary: #9fd8f6;
+@transparent: rgba(0, 0, 0, 0);
+@mask-color: rgba(0, 0, 0, 0.6);
