--- a/src/Button/index.module.less
+++ b/src/Button/index.module.less
@@ -1,4 +1,4 @@
-@import '../color.less';
+@import '../global.less';
 
 .buttonContainer {
   width: max-content;
@@ -13,6 +13,7 @@
   background-color: @main-color;
   background-repeat: no-repeat;
   padding: 2px;
+  filter: drop-shadow(-5px 0px 3px @black);
 }
 .buttonContainer:hover {
   cursor: pointer;
@@ -24,20 +25,21 @@
 .buttonContent {
   position: relative;
   color: @white;
-  border: 3px solid @black;
+  text-shadow: @buttonTextShadow;
+  border: 2px solid @black;
   clip-path: polygon(
     6px 0, calc(100% - 6px) 0,
     100% 0, 100% calc(100% - 6px),
     calc(100% - 6px) 100%, 0 100%,
     0 calc(100% - 6px),0 6px
   );
-  background: linear-gradient(-45deg, @black 4px, @second-color 0) bottom right,
-              linear-gradient(45deg, @black 0, @second-color 0) bottom left,
-              linear-gradient(135deg, @black 4px, @second-color 0) top left,
-              linear-gradient(-135deg, @black 0,@second-color 0) top right;
+  background: linear-gradient(-45deg, @black 4px, @secondary-color 0) bottom right,
+              linear-gradient(45deg, @black 0, @secondary-color 0) bottom left,
+              linear-gradient(135deg, @black 4px, @secondary-color 0) top left,
+              linear-gradient(-135deg, @black 0,@secondary-color 0) top right;
   background-size: 51% 51%;
   background-repeat: no-repeat;
-  padding: 5px 40px;
+  padding: 5px 60px;
   box-sizing: border-box;
 }
 
