--- a/src/color.less
+++ b/src/color.less
@@ -2,6 +2,9 @@
 @secondary-color: #004d89;
 @white: #fff;
 @black: #000;
+@shilter: linear-gradient(to right, #0b808b, #07c6d2);
+@blood: linear-gradient(to right, #810910, #c40f19);
+@blood-text: #c3f3f8;
 @font-color-primary: #9fd8f6;
 @transparent: rgba(0, 0, 0, 0);
 @mask-color: rgba(0, 0, 0, 0.6);
