perf: 优化Blood组件（使用svg代替clip-path:polygon）

--- a/.storybook/index.css
+++ b/.storybook/index.css
@@ -17,6 +17,10 @@ body {
   display: none !important;
 }
 
+.search-field {
+  display: none !important;
+}
+
 .os-padding {
   margin-right: 20px !important;
 }
