--- a/src/Blood/index.module.less
+++ b/src/Blood/index.module.less
@@ -3,13 +3,17 @@
 .container {
   transform: rotate3d(1, 1, 1, -5deg);
   color: @blood-text;
-  width: 140px;
+  width: 180px;
   position: relative;
+}
+
+.svgGradient {
+  transform: rotate3d(1, 1, 1, -5deg);
+  filter: blur(5px);
 }
 
 .bloodWrapper, .shilterWrapper  {
   filter: drop-shadow(-4px 4px 4px #135368);
-  margin: auto;
   height: 20px;
   width: 140px;
 }
@@ -19,14 +23,6 @@
 }
 
 .shilterContainer {
-  clip-path: polygon(
-    0 0, 
-    80px 0,
-    82px 5px,
-    135px 5px,
-    140px 15px, 
-    5px 15px
-  );
   width: 100%;
   height: 100%;
   content: '';
@@ -66,14 +62,6 @@
 }
 
 .bloodContainer {
-  clip-path: polygon(
-    5px 0, 
-    175px 0,
-    180px 10px,
-    80px 10px,
-    72px 15px, 
-    10px 15px
-  );
   width: 100%;
   height: 100%;
   background: @blood;
@@ -86,5 +74,12 @@
   display: flex;
   align-items: center;
   left: -15px;
+  font-size: 18px;
+}
+
+.profession {
+  position: absolute;
+  right: -10px;
+  bottom: -12px;
   font-size: 18px;
 }
