--- a/src/Button/index.module.less
+++ b/src/Button/index.module.less
@@ -14,6 +14,7 @@
   background-repeat: no-repeat;
   padding: 2px;
   filter: drop-shadow(-5px 0px 3px @black);
+  user-select: none;
 }
 .buttonContainer:hover {
   cursor: pointer;
