--- a/src/Button/index.module.less
+++ b/src/Button/index.module.less
@@ -26,9 +26,13 @@
 }
 .interactiveContainer {
   border-radius: 3px;
-  background-color: @main-color;
   transform: rotate(360deg);
   transition: all ease 3s;
+  background: unset;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .buttonContainer:hover {
   cursor: pointer;
@@ -62,7 +66,7 @@
 .interactiveContent {
   border-radius: 3px;
   padding: 2px 8px;
-  background-color: @secondary-color;
+  background: unset;
 }
 
 .disabled {
@@ -70,4 +74,23 @@
 }
 .buttonContainer.disabled:hover {
   cursor: not-allowed;
+}
+
+.interactiveSVGContainer {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  .svg {
+    border-radius: 3px;
+  }
+  .background {
+    stroke-width: 5px;
+    opacity: 0.3;
+  }
+  .meter {
+    stroke-width: 6px;
+  }
+  .fill {
+    transform: translate(2px, 2px);
+  }
 }
