--- a/src/Card/index.module.less
+++ b/src/Card/index.module.less
@@ -3,7 +3,7 @@
 
 .container {
   display: block;
-  height: 320px;
+  min-height: 320px;
   width: 400px;
   position: relative;
 }
@@ -12,10 +12,13 @@
   display: block;
   position: absolute;
   z-index: -1;
+  height: 100%;
+  width: 100%;
 }
 .backgroundSvg {
-  height: 320px;
-  width: 400px;
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
 .backgroundTopRight {
   transform: rotateY(-180deg) translateX(-100%);
@@ -33,26 +36,31 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding-left: 5px;
+  padding-left: 9px;
   padding-right: 25px;
   color: @white;
   box-sizing: border-box;
+  height: 20px;
+  align-items: center;
   * {
     font-family: sans-serif;
   }
   font-size: 12px;
   .score {
-    font-size: 24px;
+    font-size: 26px;
     margin-top: -8px;
     display: inline-block;
-    font-family: 'Countach Italic';
+    font-family: 'Countach BlodItalic';
     margin-right: 20px;
+    -webkit-text-stroke: 1px #000403;
+    color: #96c88b;
   }
   .level {
     display: inline-block;
     margin-left: 20px;
     font-family: 'Countach Italic';
-    font-size: 18px;
+    font-size: 20px;
+    margin-bottom: -4px;
   }
 }
 
@@ -151,6 +159,35 @@
     font-family: sans-serif;
     display: inline-block;
     width: 30%;
+  }
+}
+
+.amount {
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 25px;
+  display: flex;
+  margin: 0 auto;
+  width: max-content;
+  text-align: center;
+  bottom: 2px;
+  color: #96c88b;
+  align-items: center;
+  .currency {
+    height: 21px;
+    width: 15px;
+    line-height: 21px;
+    background: #2a2c2d;
+    border: 1px solid #000403;
+  }
+  .amountItem {
+    background: #2a2c2d;
+    height: 25px;
+    width: 15px;
+    line-height: 25px;
+    border: 1px solid #000403;
+    font-size: 22px;
   }
 }
 
