--- a/src/Card/index.module.less
+++ b/src/Card/index.module.less
@@ -99,7 +99,7 @@
     clip-path: polygon(0 0, calc(100% - 6px) 0, 100% 6px, 100% 100%, 0 100%);
     color: #38c855;
     font-family: sans-serif;
-    font-size: 12px;
+    font-size: 16px;
   }
   .rarityBottom {
     height: 42px;
@@ -117,10 +117,6 @@
   .additionItem {
     line-height: 23px;
   }
-  .additionItem:last-child {
-    margin-top: 10px;
-    font-size: 14px;
-  }
   .additionNumber {
     color: #dbdfdf;
   }
@@ -133,6 +129,11 @@
     margin-right: 8px;
     color: #534f5a;
   }
+}
+
+.superAddition {
+  margin-top: 10px;
+  font-size: 14px;
 }
 
 .gunIndicatorContainer {
@@ -191,13 +192,11 @@
   }
 }
 
-.company {
-  position: absolute;
-  bottom: 0px;
-  right: 12px;
+.company.jakobs {
   background: url(../assets/img/jakobs.png) no-repeat center;
   width: 115px;
   height: 45px;
   background-size: 115px 45px;
-  transform: scale(0.8);
+  transform: scale(0.8) translateX(calc(-100% - 45px));
+  margin-left: 100%;
 }
