style: 修改样式，Message组件内容不可选中

--- a/src/Message/index.module.less
+++ b/src/Message/index.module.less
@@ -16,8 +16,12 @@
 
 .levelText {
   font-size: 86px;
+  user-select: none;
+  pointer-events: none;
 }
 
 .leveledUpText {
   font-size: 24px;
+  user-select: none;
+  pointer-events: none;
 }
