fix: 修复样式导入问题

--- a/src/Dialog/index.module.less
+++ b/src/Dialog/index.module.less
@@ -12,7 +12,8 @@
 );
 
 .dialogContainer {
-  width: 100%;
+  width: 80%;
+  margin: 0 auto;
   box-sizing: border-box;
   clip-path: @path;
   background-color: @main-color;
@@ -26,6 +27,7 @@
   left: 0;
   right: 0;
   transform: translateY(-50%);
+  font-family: 'Countach Italic';
 }
 
 .dialogMask {
