--- a/src/Button/index.module.less
+++ b/src/Button/index.module.less
@@ -15,6 +15,7 @@
   background-repeat: no-repeat;
   padding: 2px;
   user-select: none;
+  font-family: 'Countach Italic';
 }
 .polygonContainer {
   clip-path: @polygon;
