--- a/src/Setting/index.module.less
+++ b/src/Setting/index.module.less
@@ -128,7 +128,7 @@
 .itemOptionContainer {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 40%;
   flex-shrink: 0;
 }
